# seam-carving

./: CMakeLists.txt  LICENSE  README.md  input-image.txt  input-video.txt  input.txt  seam-carving-image.cpp  seam-carving-video.cpp  seam-carving.cpp
